exports[`ChildItem does not render if no section 1`] = `
<div className="one-whole grid__item">
<div className="rounded ratio--landscape soft-ends">
<div className="ratio__item" />
</div>
</div>
`;

exports[`ChildItem render with props 1`] = `
<div className="one-whole soft-half-left grid__item push-half-bottom">
<ExternalLinkWrapper to="http://test.com" className="plain" onClick={[Function]} id="1">
<div className="rounded one-whole grid rounded flush background--light-primary">
<div className="grid__item two-thirds hard" style={{...}}>
<h6 className="soft-left text-dark-primary flush-bottom">
test text
</h6>
</div>
<div className="grid__item one-third hard" style={{...}}>
<ImageLoader src="http://test.com/test.jpg" preloader={[Function]} renderElement={[Function]} force={true} imageclasses={{...}} style={{...}} wrapper={[Function]}>
<div className="ratio__item" />
</ImageLoader>
</div>
</div>
</ExternalLinkWrapper>
</div>
`;

exports[`ExternalLinkWrapper renders external link 1`] = `
<a to="//test.com" href="//test.com">
<h1>
test
</h1>
</a>
`;

exports[`ExternalLinkWrapper renders internal link 1`] = `
<Link to="/test" onlyActiveOnIndex={false} style={{...}}>
<h1>
test
</h1>
</Link>
`;

exports[`SectionItem renderArrow renders if state id matches section id 1`] = `
<div
  className="locked background--dark-primary"
  style={
    Object {
      "background": "transparent",
      "borderColor": "transparent transparent #303030 transparent",
      "borderStyle": "solid",
      "borderWidth": "0 15px 10px 15px",
      "height": 0,
      "left": "50%",
      "marginBottom": "-10px",
      "marginLeft": "-10px",
      "marginTop": "2px",
      "width": 0,
    }
  } />
`;

exports[`SectionItem renderChildren renders children of a section 1`] = `
<div
  className="soft-half-right soft-left soft-top background--dark-primary push-bottom">
  <div
    className="grid ">
    <ChildItem
      go={[Function]}
      section={
        Object {
          "description": "test description",
          "id": "3",
          "image": "http://test.com/test.jpg",
          "link": "http://test.com",
          "text": "test text",
        }
      } />
    <ChildItem
      go={[Function]}
      section={
        Object {
          "description": "test description",
          "id": "4",
          "image": "http://test.com/test.jpg",
          "link": "http://test.com",
          "text": "test text",
        }
      } />
  </div>
</div>
`;

exports[`SectionItem renders with props 1`] = `
<div>
<div className="soft-half-right soft-left">
<div className="grid">
<div className="grid__item one-whole">
<div className="grid">
<SingleItem section={{...}} go={[Function]} />
<SingleItem section={{...}} go={[Function]} />
</div>
</div>
</div>
</div>
<div className="one-whole">
<VelocityTransitionGroup enter={{...}} leave={{...}} runOnMount={false} enterHideStyle={{...}} enterShowStyle={{...}} />
</div>
</div>
`;

exports[`SingleItem does not render if no section 1`] = `
<div className="one-half grid__item">
<div className="rounded ratio--landscape">
<div className="ratio__item" />
</div>
</div>
`;

exports[`SingleItem renders with props 1`] = `
<div className="one-half soft-half-left grid__item push-half-bottom">
<ExternalLinkWrapper to="http://test.com" className="plain" onClick={[Function]} id="1">
<ImageLoader src="http://test.com/test.jpg" preloader={[Function]} renderElement={[Function]} imageclasses={{...}} style={{...}} wrapper={[Function]}>
<div className="overlay__item floating__item ratio__item">
<h6 className="text-light-primary soft-left">
test text
</h6>
</div>
</ImageLoader>
</ExternalLinkWrapper>
<h1>
test
</h1>
</div>
`;

exports[`preloader renders 1`] = `
<div
  className="one two"
  id="2">
  <h1>
    test
  </h1>
</div>
`;

exports[`renderElement renders 1`] = `
<div
  className="one two"
  id="2"
  style={
    Object {
      "color": "red",
    }
  }>
  <h1>
    test
  </h1>
</div>
`;
